@@ -5,7 +5,8 @@ Changelog
 1.9.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix site hook within ``staticuid`` decorated methods.
+  [jone]
 
 
 1.9.0 (2015-05-15)
